--- a/examples/example-tutorial1/index.html
+++ b/examples/example-tutorial1/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Example - example-tutorial1</title>
-  <link href="/css/docs.utils.css" rel="stylesheet" type="text/css">
+  <link href="js/docs.utils.css" rel="stylesheet" type="text/css">
   
 
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.7/angular.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.2/d3.min.js"></script>
-  <script src="/js/docs.utils.js"></script>
-  <script src="/js/smeans.js"></script>
+  <script src="js/docs.utils.js"></script>
+  <script src="js/smeans.js"></script>
   <script src="app.js"></script>
   
 
