--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <section class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">smeans.js</a>
+          <a class="navbar-brand" href="#/">smeans.js</a>
         </div>
       </div>
     </section>
